# CrabTask

./: .gitignore  05-Jun-2025.txt  07-Jun-2025.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  quotes.json
.github/workflows/: build.yml  rust.yml
data/: todo_data.json
data_todo/: todo_data.json
src/: json_parser.rs  main.rs  main_old.rs  types.rs
src/json_parser/: mod.rs
src/types/: mod.rs
src/user_input/: mod.rs
