[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = {version = "0.29.0", features= ["all-widgets"]}
chrono = "0.4"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
rand = "0.9.2"
